[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "occu-med-global-address-geocoder"
version = "1.0.0"
description = "Flask app for cache-first address geocoding with Neon Postgres."
requires-python = ">=3.11,<3.12"

[project.scripts]
streamlit = "render_start:main"
